<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_margin="16dp"
    tools:context="com.example.envy13.login.RegistrationActivity">

    <ImageView
        android:id="@+id/imgview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/mahitajiicon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@+id/imgview"
        android:padding="20dp"
        android:hint="@string/name"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/etUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:layout_below="@+id/etUserName"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/etUserEmail"
        android:padding="20dp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/etUserPassword"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginLeft="8dp"
            android:background="#00a2ad"
            android:padding="20dp"/>

        <Button
            android:id="@+id/tvUserLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="5dp"
            android:background="#00a2ad"
            android:padding="20dp"/>

    </LinearLayout>


</RelativeLayout>
