<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_margin="16dp"
    tools:context="com.example.envy13.login.MainActivity">

    <ImageView
        android:id="@+id/imgview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/mahitajiicon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="200dp"
        android:padding="20dp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/etEmail"
        android:padding="20dp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:id="@+id/linlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/login"
            android:layout_marginLeft="10dp"
            android:background="#00a2ad"/>

        <Button
            android:id="@+id/tvRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/create_account"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="3dp"
            android:background="#00a2ad"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linlay"
        android:layout_marginTop="8dp"
        android:text="forgot password?"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/background_dark"
        android:clickable="true"/>

</RelativeLayout>
